[project]
name = "kurs-number-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Yuliya",email = "yulechka944992@gmail.com"}
]
package-mode = false
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests (>=2.33.1,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pandas-stubs (>=3.0.0.260204,<4.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "black (>=26.3.0,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)"
]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.black]
line-length = 119
exclude = """ \\.git """

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'